@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-25T16:23:18Z",
-  "count_outdated" : 2174,
-  "uniques_outdated" : 443,
-  "count" : 2217,
-  "uniques" : 471,
+  "timestamp" : "2022-06-26T01:53:05Z",
+  "count_outdated" : 2178,
+  "uniques_outdated" : 446,
+  "count" : 2220,
+  "uniques" : 472,
   "clones" : [
-    {
-      "timestamp": "2022-06-11T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 3,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-06-12T00:00:00Z",
       "count": 1,
@@ -98,10 +91,10 @@
     },
     {
       "timestamp": "2022-06-25T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 4,
+      "count_minmax": [ 2, 4 ],
+      "uniques": 3,
+      "uniques_minmax": [ 2, 3 ]
     }
   ]
 }
