@@ -1,12 +1,7 @@
 {
-  "count": 43,
-  "uniques": 13,
+  "count": 42,
+  "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-06-11T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2022-06-12T00:00:00Z",
       "count": 1,
@@ -69,8 +64,8 @@
     },
     {
       "timestamp": "2022-06-25T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 4,
+      "uniques": 3
     }
   ]
 }
