@@ -1,3 +1,10 @@
+2022-06-26T01:53:05Z:
+* notice: last 14d: unq all: 12 42
+* notice: prev accum: outdated-unq outdated-all / unq all: 443 2174 / 471 2217
+* notice: next accum: outdated-unq outdated-all / unq all: 446 2178 / 472 2220
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +4 -0 -0 / 3 4
+* notice: removed / changed dates: [2022-06-11] / [2022-06-25]
+
 2022-06-25T16:23:18Z:
 * notice: last 14d: unq all: 13 43
 * notice: prev accum: outdated-unq outdated-all / unq all: 443 2174 / 469 2215
